feat(crypto): Upgrade encryption to AES-GCM and Argon2id
This commit significantly enhances the security of the vault by replacing older cryptographic primitives with modern, recommended standards.

- Replaced AES-256-CBC with AES-256-GCM. This introduces authenticated encryption (AEAD), providing both data confidentiality and integrity. The vault is now protected against tampering attacks (e.g., padding oracle).

- Replaced PBKDF2 with Argon2id for key derivation. Argon2id is the winner of the Password Hashing Competition and offers superior resistance to GPU-based cracking attempts due to its memory-hard properties.

- Includes miscellaneous code quality improvements, such as enhanced const-correctness in the crypto and command registry modules.

BREAKING CHANGE: The vault format has been updated to v2 to support the new cryptographic schemes. Vaults created with previous versions are no longer compatible :>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # This tells CMake to find the OpenSSL library on your system.
 # It will throw an error if OpenSSL is not found.
 find_package(OpenSSL REQUIRED)
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(ARGON2 REQUIRED libargon2)
 
 # Find all source files in the src/ directory
 file(GLOB SOURCES "src/*.cpp")
@@ -21,10 +23,11 @@ add_executable(duckpass ${SOURCES})
 target_include_directories(duckpass PUBLIC
         "${CMAKE_SOURCE_DIR}/include"
         "${CMAKE_SOURCE_DIR}/vendor"
+        ${ARGON2_INCLUDE_DIRS}
 )
 
 # We need to link against the 'Crypto' component of OpenSSL.
-target_link_libraries(duckpass PRIVATE OpenSSL::Crypto)
+target_link_libraries(duckpass PRIVATE OpenSSL::Crypto ${ARGON2_LIBRARIES})
 
 # A small message after a successful build
 add_custom_command(TARGET duckpass POST_BUILD
